# ml_kit

./: .gitignore  Cargo.toml  README.md  rustc-ice-2025-05-15T17_12_52-18535.txt
src/: lib.rs  main  main.rs
src/images/: util.rs
src/math/: activation.rs  loss.rs  mod.rs  pca.rs  stats.rs  svd.rs
src/models/: convneuralnet.rs  mod.rs  neuralnet.rs  perceptron.rs
src/training/: dataset.rs  learning_rate.rs  mod.rs  sgd.rs
src/utility/: activation.rs  file_utility.rs  mod.rs
src/utility/mnist/: mnist_utility.rs  mod.rs
testing/files/: digits.mlk_nn  digits_nn.mlk_nn  fashion_nn.mlk_nn  rgba_cat_0.mlk_nn  rgba_cat_1.mlk_nn  rgba_cat_2.mlk_nn  rgba_sheep_0.mlk_nn  rgba_sheep_1.mlk_nn  rgba_sheep_2.mlk_nn  rgba_sheep_3.mlk_nn  xor.mlk_nn
tests/files/: xor.mlk_nn
writeups/final/: backprop.aux  bibliography.bib  final_report.bbl  final_report.run.xml  final_report.tex  learning_rates.aux
writeups/final/description/: neuralnets.tex  svd.aux  svd.tex
writeups/final/evaluation/: neuralnets.tex  svd.tex
writeups/tex/: backprop.aux  backprop.tex  learning_rates.aux  learning_rates.tex  notes.run.xml  notes.tex
writeups/tex/meetings/: mar_5.tex
