[package]
name = "ml_kit"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "A Machine Learning library for Rust"
readme = "README.md"

[dependencies]
byteorder = "1.5.0"
flate2 = "1.1.0"
idx_parser = "0.3.0"
image = "0.25.6"
matrix_kit = "0.2.34"
rand = "0.9.0"
rand_distr = "0.5.1"
